# volatile_stock_trader

./: CONFIG_README.md  LICENSE  OPTIMIZATION_README.md  README.md  all_strategies_results.json  back_testing.ipynb  cli_equity_curve.json  cli_historical_data.csv  cli_optimization_demo.ipynb  cli_signals.json  config_usage_example.md  debug_backtester_detailed.py  debug_backtester_equity.py  debug_detailed.py  debug_equity_curve.py  live_testing.ipynb  multi_symbol_results.json  optimisation_testing.ipynb  previous_effective_strategy_configs.yaml  pyproject.toml  test_all_strategies.py  testing.ipynb
configs/: config_all_strategies.yaml  config_example.yaml  config_multi_symbol.yaml  config_optimization.yaml  config_optimization_advanced.yaml  config_simple.yaml  optimized_aggressive_config.json  optimized_default_config.json
examples/: README.md  simple_ma_strategy.py
src/stock_bot/: __main__.py  strategy.py  strategy_backtester.py  strategy_loader.py  strategy_tester.py
src/stock_bot/strategies/: README.md  __init__.py  aggressive_strategy.py  base_strategy.py  default_strategy.py  macd_crossover_strategy.py  macd_divergence_strategy.py  macd_histogram_strategy.py  mean_reversion_strategy.py  simple_mean_reversion_strategy.py  simple_trend_strategy.py  trend_following_strategy.py
