[project]
name = "stock-bot"
version = "0.1.0"
description = "A package for backtesting and simulating stock trading strategies."
authors = [
    { name = "Callum" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "dash",
    "yfinance",
    "scipy",
    "ipython"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
